# ds680-mammoul-assignment3

./: .gitignore  README.md  pyproject.toml  run_all_analyses_gemini.py  run_evaluations.sh  run_evaluations_qwen.sh
Data/: evaluate_batch_gemini.py  evaluate_batch_qwen.py
Data/L2.1/L4.1/: doc_evaluation_result.json  judge_prompt.txt  prompt_set.json
analysis_reports/: L2.1_L4.1_gemini_vs_qwen3_analysis.md  L2.1_L4.2_gemini_vs_qwen3_analysis.md  L2.1_L4.3_gemini_vs_qwen3_analysis.md  L2.1_L4.4_gemini_vs_qwen3_analysis.md  L2.1_L4.5_gemini_vs_qwen3_analysis.md  L2.2_L4.6_gemini_vs_qwen3_analysis.md  L2.2_L4.7_gemini_vs_qwen3_analysis.md  L2.2_L4.8_gemini_vs_qwen3_analysis.md  L2.3_L4.10_gemini_vs_qwen3_analysis.md  L2.3_L4.9_gemini_vs_qwen3_analysis.md  L2.4_L4.11_gemini_vs_qwen3_analysis.md  L2.4_L4.12_gemini_vs_qwen3_analysis.md  L2.4_L4.13_gemini_vs_qwen3_analysis.md  L2.4_L4.14_gemini_vs_qwen3_analysis.md  evaluation_results_20251130_113644_analysis.md  evaluation_results_20251130_133309_analysis.md  evaluation_results_20251130_140704_analysis.md  evaluation_results_20251130_144908_analysis.md  evaluation_results_20251130_153708_analysis.md  evaluation_results_20251130_161911_analysis.md  evaluation_results_20251130_164710_analysis.md  evaluation_results_20251130_172338_analysis.md  evaluation_results_20251130_175614_analysis.md  evaluation_results_20251130_183358_analysis.md  evaluation_results_20251130_190407_analysis.md  evaluation_results_20251130_194921_analysis.md  evaluation_results_20251130_202710_analysis.md  evaluation_results_20251130_212843_analysis.md
(+69 files in other folders)
