[project]
name = "ds680-mammoul-assignment3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "scipy>=1.16.3",
    "google-generativeai>=0.8.0",
]
